// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`entity running technical tests when navigated to catalog renders 1`] = `
<body>
  <div>
    <div
      class="ClusterManager"
    >
      <div
        class="topBar"
      >
        <div
          class="items"
        >
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive focusable"
              data-testid="home-button"
              tabindex="0"
            >
              <span
                class="icon"
                data-icon-name="home"
              >
                home
              </span>
            </i>
          </div>
          <div
            class="size-sm"
          />
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive disabled focusable"
              data-testid="history-back"
            >
              <span
                class="icon"
                data-icon-name="arrow_back"
              >
                arrow_back
              </span>
            </i>
          </div>
          <div
            class="size-sm"
          />
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive disabled focusable"
              data-testid="history-forward"
            >
              <span
                class="icon"
                data-icon-name="arrow_forward"
              >
                arrow_forward
              </span>
            </i>
          </div>
          <div
            class="separator"
          />
        </div>
      </div>
      <main>
        <div
          id="lens-views"
        />
        <div
          class="mainLayout"
          style="--sidebar-width: 200px;"
        >
          <div
            class="sidebar"
          >
            <div
              class="flex flex-col w-full"
            >
              <div
                class="catalog"
              >
                Catalog
              </div>
              <ul
                class="treeView"
                role="tree"
              >
                <li
                  class="root selected treeItem"
                  data-testid="*-tab"
                  role="treeitem"
                >
                  <div
                    class="iconContainer"
                  />
                  <div
                    class="label"
                  >
                    Browse
                  </div>
                </li>
                <div
                  class="HorizontalLine size-xxs"
                />
                <li
                  class="root treeGroup"
                  role="group"
                >
                  <div
                    class="group"
                  >
                    <div
                      class="iconContainer"
                    >
                      <i
                        class="Icon material focusable"
                      >
                        <span
                          class="icon"
                          data-icon-name="expand_more"
                        >
                          expand_more
                        </span>
                      </i>
                    </div>
                    <div
                      class="label"
                    >
                      <div
                        class="parent"
                      >
                        Categories
                      </div>
                    </div>
                  </div>
                  <ul
                    class="contents expanded"
                  >
                    <li
                      class="root treeItem"
                      data-testid="entity.k8slens.dev/General-tab"
                      role="treeitem"
                    >
                      <div
                        class="iconContainer"
                      >
                        <i
                          class="Icon material focusable small"
                        >
                          <span
                            class="icon"
                            data-icon-name="settings"
                          >
                            settings
                          </span>
                        </i>
                      </div>
                      <div
                        class="label"
                      >
                        <div
                          class="flex"
                        >
                          <div>
                            General
                          </div>
                        </div>
                      </div>
                    </li>
                    <li
                      class="root treeItem"
                      data-testid="entity.k8slens.dev/KubernetesCluster-tab"
                      role="treeitem"
                    >
                      <div
                        class="iconContainer"
                      >
                        <i
                          class="Icon focusable small"
                        >
                          <span
                            class="icon"
                            data-icon-name=""
                          />
                        </i>
                      </div>
                      <div
                        class="label"
                      >
                        <div
                          class="flex"
                        >
                          <div>
                            Clusters
                          </div>
                        </div>
                      </div>
                    </li>
                    <li
                      class="root treeItem"
                      data-testid="entity.k8slens.dev/WebLink-tab"
                      role="treeitem"
                    >
                      <div
                        class="iconContainer"
                      >
                        <i
                          class="Icon material focusable small"
                        >
                          <span
                            class="icon"
                            data-icon-name="public"
                          >
                            public
                          </span>
                        </i>
                      </div>
                      <div
                        class="label"
                      >
                        <div
                          class="flex"
                        >
                          <div>
                            Web Links
                          </div>
                        </div>
                      </div>
                    </li>
                    <li
                      class="root treeItem"
                      data-testid="entity.k8slens.dev/Mock-tab"
                      role="treeitem"
                    >
                      <div
                        class="iconContainer"
                      >
                        <i
                          class="Icon material focusable small"
                        >
                          <span
                            class="icon"
                            data-icon-name="gear"
                          >
                            gear
                          </span>
                        </i>
                      </div>
                      <div
                        class="label"
                      >
                        <div
                          class="flex"
                        >
                          <div>
                            mock
                          </div>
                        </div>
                      </div>
                    </li>
                  </ul>
                </li>
              </ul>
            </div>
            <div
              class="ResizingAnchor horizontal trailing"
            />
          </div>
          <div
            class="contents"
          >
            <div
              class="views"
            >
              <div
                class="ItemListLayout flex column Catalog"
                data-testid="catalog-list-for-browse-all"
              >
                <div
                  class="header flex gaps align-center"
                >
                  <h5
                    class="title"
                  >
                    Browse All
                  </h5>
                  <div
                    class="info-panel box grow"
                  >
                    1 item
                  </div>
                  <div
                    class="Input SearchInput focused"
                  >
                    <label
                      class="input-area flex gaps align-center"
                      id=""
                    >
                      <input
                        class="input box grow"
                        placeholder="Search..."
                        spellcheck="false"
                        value=""
                      />
                      <i
                        class="Icon material focusable small"
                      >
                        <span
                          class="icon"
                          data-icon-name="search"
                        >
                          search
                        </span>
                      </i>
                    </label>
                    <div
                      class="input-info flex gaps"
                    />
                  </div>
                </div>
                <div
                  class="items box grow flex column"
                >
                  <div
                    class="Table flex column Catalog box grow dark selectable scrollable sortable autoSize virtual"
                  >
                    <div
                      class="TableHead sticky nowrap topLine"
                    >
                      <div
                        class="TableCell entityName nowrap sorting"
                        id="name"
                      >
                        <div
                          class="content"
                        >
                          Name
                        </div>
                        <i
                          class="Icon sortIcon material focusable"
                        >
                          <span
                            class="icon"
                            data-icon-name="arrow_drop_down"
                          >
                            arrow_drop_down
                          </span>
                        </i>
                      </div>
                      <div
                        class="TableCell nowrap sorting"
                        data-testid="catalog-kind-column"
                        id="kind"
                      >
                        <div
                          class="content"
                        >
                          Kind
                        </div>
                        <i
                          class="Icon sortIcon material focusable"
                        >
                          <span
                            class="icon"
                            data-icon-name="arrow_drop_down"
                          >
                            arrow_drop_down
                          </span>
                        </i>
                      </div>
                      <div
                        class="TableCell sourceCell nowrap sorting"
                        data-testid="catalog-source-column"
                        id="source"
                      >
                        <div
                          class="content"
                        >
                          Source
                        </div>
                        <i
                          class="Icon sortIcon material focusable"
                        >
                          <span
                            class="icon"
                            data-icon-name="arrow_drop_down"
                          >
                            arrow_drop_down
                          </span>
                        </i>
                      </div>
                      <div
                        class="TableCell labelsCell scrollable nowrap"
                        data-testid="catalog-labels-column"
                        id="labels"
                      >
                        <div
                          class="content"
                        >
                          Labels
                        </div>
                      </div>
                      <div
                        class="TableCell statusCell nowrap sorting"
                        data-testid="catalog-status-column"
                        id="status"
                      >
                        <div
                          class="content"
                        >
                          Status
                        </div>
                        <i
                          class="Icon sortIcon material focusable"
                        >
                          <span
                            class="icon"
                            data-icon-name="arrow_drop_down"
                          >
                            arrow_drop_down
                          </span>
                        </i>
                      </div>
                      <div
                        class="TableCell menu nowrap"
                      >
                        <div
                          class="content"
                        >
                          <i
                            class="Icon material interactive focusable"
                            id="menu-actions-for-item-object-list-content"
                            tabindex="0"
                          >
                            <span
                              class="icon"
                              data-icon-name="more_vert"
                            >
                              more_vert
                            </span>
                          </i>
                        </div>
                      </div>
                    </div>
                    <div
                      class="VirtualList Catalog box grow dark"
                    >
                      <div>
                        <div
                          class="list"
                          style="position: relative; height: 420000px; width: 100%; overflow: auto; will-change: transform; direction: ltr;"
                        >
                          <div
                            style="height: 36px; width: 100%;"
                          >
                            <div
                              style="position: absolute; left: 0px; top: 0px; height: 36px; width: 100%;"
                            >
                              <div
                                class="TableRow nowrap"
                              >
                                <div
                                  class="TableCell entityName"
                                >
                                  <div
                                    class="Avatar rounded catalogAvatar"
                                    style="width: 24px; height: 24px; background: rgb(6, 137, 137);"
                                  >
                                    ace
                                  </div>
                                  <span>
                                    a catalog entity
                                  </span>
                                  <i
                                    class="Icon pinIcon svg interactive focusable small"
                                    tabindex="0"
                                  >
                                    <span
                                      class="icon"
                                    />
                                  </i>
                                  <div>
                                    Add to Hotbar
                                  </div>
                                </div>
                                <div
                                  class="TableCell"
                                >
                                  Mock
                                </div>
                                <div
                                  class="TableCell sourceCell"
                                >
                                  unknown
                                </div>
                                <div
                                  class="TableCell labelsCell scrollable"
                                >
                                  <div
                                    class="badge clickable scrollable"
                                    title="test=label"
                                  >
                                    test=label
                                  </div>
                                </div>
                                <div
                                  class="TableCell statusCell"
                                >
                                  <span
                                    class=""
                                  />
                                </div>
                                <div
                                  class="TableCell menu"
                                >
                                  <div>
                                    <i
                                      class="Icon material interactive focusable"
                                      data-testid="icon-for-menu-actions-for-catalog-for-a_catalogEntity_uid"
                                      id="menu-actions-for-catalog-for-a_catalogEntity_uid"
                                      tabindex="0"
                                    >
                                      <span
                                        class="icon"
                                        data-icon-name="more_vert"
                                      >
                                        more_vert
                                      </span>
                                    </i>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="AddRemoveButtons flex gaps"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="footer"
          />
        </div>
      </main>
      <div
        class="HotbarMenu flex column"
      >
        <div
          class="HotbarItems flex column gaps"
        >
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="0"
          >
            <div
              style="z-index: 12; position: absolute;"
            >
              <div
                class="HotbarIcon contextMenuAvailable"
              >
                <div
                  class="Avatar rounded disabled avatar"
                  id="hotbarIcon-hotbar-icon-welcome-page-entity"
                  style="width: 40px; height: 40px; background: rgb(210, 16, 232);"
                >
                  WP
                </div>
              </div>
            </div>
          </div>
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="1"
          >
            <div
              style="z-index: 11; position: absolute;"
            >
              <div
                class="HotbarIcon contextMenuAvailable"
              >
                <div
                  class="Avatar rounded disabled avatar"
                  id="hotbarIcon-hotbar-icon-catalog-entity"
                  style="width: 40px; height: 40px; background: rgb(5, 1, 130);"
                >
                  Ca
                </div>
              </div>
            </div>
          </div>
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="2"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="3"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="4"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="5"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="6"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="7"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="8"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="9"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="10"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="11"
          />
        </div>
        <div
          class="HotbarSelector"
        >
          <i
            class="Icon material interactive focusable"
            tabindex="0"
          >
            <span
              class="icon"
              data-icon-name="arrow_left"
            >
              arrow_left
            </span>
          </i>
          <div
            class="HotbarIndex"
          >
            <div
              class="badge Badge small clickable"
              data-testid="hotbar-menu-badge-for-default"
              id="hotbarIndex"
            >
              1
            </div>
          </div>
          <i
            class="Icon material interactive focusable"
            tabindex="0"
          >
            <span
              class="icon"
              data-icon-name="arrow_right"
            >
              arrow_right
            </span>
          </i>
        </div>
      </div>
      <div
        class="StatusBar"
        data-testid="status-bar"
      >
        <div
          class="leftSide"
          data-testid="status-bar-left"
        />
        <div
          class="rightSide"
          data-testid="status-bar-right"
        />
      </div>
    </div>
    <div
      class="Notifications flex column align-flex-end"
    />
  </div>
</body>
`;

exports[`entity running technical tests when navigated to catalog when details panel is opened renders 1`] = `
<body>
  <div>
    <div
      class="ClusterManager"
    >
      <div
        class="topBar"
      >
        <div
          class="items"
        >
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive focusable"
              data-testid="home-button"
              tabindex="0"
            >
              <span
                class="icon"
                data-icon-name="home"
              >
                home
              </span>
            </i>
          </div>
          <div
            class="size-sm"
          />
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive disabled focusable"
              data-testid="history-back"
            >
              <span
                class="icon"
                data-icon-name="arrow_back"
              >
                arrow_back
              </span>
            </i>
          </div>
          <div
            class="size-sm"
          />
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive disabled focusable"
              data-testid="history-forward"
            >
              <span
                class="icon"
                data-icon-name="arrow_forward"
              >
                arrow_forward
              </span>
            </i>
          </div>
          <div
            class="separator"
          />
        </div>
      </div>
      <main>
        <div
          id="lens-views"
        />
        <div
          class="mainLayout"
          style="--sidebar-width: 200px;"
        >
          <div
            class="sidebar"
          >
            <div
              class="flex flex-col w-full"
            >
              <div
                class="catalog"
              >
                Catalog
              </div>
              <ul
                class="treeView"
                role="tree"
              >
                <li
                  class="root selected treeItem"
                  data-testid="*-tab"
                  role="treeitem"
                >
                  <div
                    class="iconContainer"
                  />
                  <div
                    class="label"
                  >
                    Browse
                  </div>
                </li>
                <div
                  class="HorizontalLine size-xxs"
                />
                <li
                  class="root treeGroup"
                  role="group"
                >
                  <div
                    class="group"
                  >
                    <div
                      class="iconContainer"
                    >
                      <i
                        class="Icon material focusable"
                      >
                        <span
                          class="icon"
                          data-icon-name="expand_more"
                        >
                          expand_more
                        </span>
                      </i>
                    </div>
                    <div
                      class="label"
                    >
                      <div
                        class="parent"
                      >
                        Categories
                      </div>
                    </div>
                  </div>
                  <ul
                    class="contents expanded"
                  >
                    <li
                      class="root treeItem"
                      data-testid="entity.k8slens.dev/General-tab"
                      role="treeitem"
                    >
                      <div
                        class="iconContainer"
                      >
                        <i
                          class="Icon material focusable small"
                        >
                          <span
                            class="icon"
                            data-icon-name="settings"
                          >
                            settings
                          </span>
                        </i>
                      </div>
                      <div
                        class="label"
                      >
                        <div
                          class="flex"
                        >
                          <div>
                            General
                          </div>
                        </div>
                      </div>
                    </li>
                    <li
                      class="root treeItem"
                      data-testid="entity.k8slens.dev/KubernetesCluster-tab"
                      role="treeitem"
                    >
                      <div
                        class="iconContainer"
                      >
                        <i
                          class="Icon focusable small"
                        >
                          <span
                            class="icon"
                            data-icon-name=""
                          />
                        </i>
                      </div>
                      <div
                        class="label"
                      >
                        <div
                          class="flex"
                        >
                          <div>
                            Clusters
                          </div>
                        </div>
                      </div>
                    </li>
                    <li
                      class="root treeItem"
                      data-testid="entity.k8slens.dev/WebLink-tab"
                      role="treeitem"
                    >
                      <div
                        class="iconContainer"
                      >
                        <i
                          class="Icon material focusable small"
                        >
                          <span
                            class="icon"
                            data-icon-name="public"
                          >
                            public
                          </span>
                        </i>
                      </div>
                      <div
                        class="label"
                      >
                        <div
                          class="flex"
                        >
                          <div>
                            Web Links
                          </div>
                        </div>
                      </div>
                    </li>
                    <li
                      class="root treeItem"
                      data-testid="entity.k8slens.dev/Mock-tab"
                      role="treeitem"
                    >
                      <div
                        class="iconContainer"
                      >
                        <i
                          class="Icon material focusable small"
                        >
                          <span
                            class="icon"
                            data-icon-name="gear"
                          >
                            gear
                          </span>
                        </i>
                      </div>
                      <div
                        class="label"
                      >
                        <div
                          class="flex"
                        >
                          <div>
                            mock
                          </div>
                        </div>
                      </div>
                    </li>
                  </ul>
                </li>
              </ul>
            </div>
            <div
              class="ResizingAnchor horizontal trailing"
            />
          </div>
          <div
            class="contents"
          >
            <div
              class="views"
            >
              <div
                class="ItemListLayout flex column Catalog"
                data-testid="catalog-list-for-browse-all"
              >
                <div
                  class="header flex gaps align-center"
                >
                  <h5
                    class="title"
                  >
                    Browse All
                  </h5>
                  <div
                    class="info-panel box grow"
                  >
                    1 item
                  </div>
                  <div
                    class="Input SearchInput focused"
                  >
                    <label
                      class="input-area flex gaps align-center"
                      id=""
                    >
                      <input
                        class="input box grow"
                        placeholder="Search..."
                        spellcheck="false"
                        value=""
                      />
                      <i
                        class="Icon material focusable small"
                      >
                        <span
                          class="icon"
                          data-icon-name="search"
                        >
                          search
                        </span>
                      </i>
                    </label>
                    <div
                      class="input-info flex gaps"
                    />
                  </div>
                </div>
                <div
                  class="items box grow flex column"
                >
                  <div
                    class="Table flex column Catalog box grow dark selectable scrollable sortable autoSize virtual"
                  >
                    <div
                      class="TableHead sticky nowrap topLine"
                    >
                      <div
                        class="TableCell entityName nowrap sorting"
                        id="name"
                      >
                        <div
                          class="content"
                        >
                          Name
                        </div>
                        <i
                          class="Icon sortIcon material focusable"
                        >
                          <span
                            class="icon"
                            data-icon-name="arrow_drop_down"
                          >
                            arrow_drop_down
                          </span>
                        </i>
                      </div>
                      <div
                        class="TableCell nowrap sorting"
                        data-testid="catalog-kind-column"
                        id="kind"
                      >
                        <div
                          class="content"
                        >
                          Kind
                        </div>
                        <i
                          class="Icon sortIcon material focusable"
                        >
                          <span
                            class="icon"
                            data-icon-name="arrow_drop_down"
                          >
                            arrow_drop_down
                          </span>
                        </i>
                      </div>
                      <div
                        class="TableCell sourceCell nowrap sorting"
                        data-testid="catalog-source-column"
                        id="source"
                      >
                        <div
                          class="content"
                        >
                          Source
                        </div>
                        <i
                          class="Icon sortIcon material focusable"
                        >
                          <span
                            class="icon"
                            data-icon-name="arrow_drop_down"
                          >
                            arrow_drop_down
                          </span>
                        </i>
                      </div>
                      <div
                        class="TableCell labelsCell scrollable nowrap"
                        data-testid="catalog-labels-column"
                        id="labels"
                      >
                        <div
                          class="content"
                        >
                          Labels
                        </div>
                      </div>
                      <div
                        class="TableCell statusCell nowrap sorting"
                        data-testid="catalog-status-column"
                        id="status"
                      >
                        <div
                          class="content"
                        >
                          Status
                        </div>
                        <i
                          class="Icon sortIcon material focusable"
                        >
                          <span
                            class="icon"
                            data-icon-name="arrow_drop_down"
                          >
                            arrow_drop_down
                          </span>
                        </i>
                      </div>
                      <div
                        class="TableCell menu nowrap"
                      >
                        <div
                          class="content"
                        >
                          <i
                            class="Icon material interactive focusable"
                            id="menu-actions-for-item-object-list-content"
                            tabindex="0"
                          >
                            <span
                              class="icon"
                              data-icon-name="more_vert"
                            >
                              more_vert
                            </span>
                          </i>
                        </div>
                      </div>
                    </div>
                    <div
                      class="VirtualList Catalog box grow dark"
                    >
                      <div>
                        <div
                          class="list"
                          style="position: relative; height: 420000px; width: 100%; overflow: auto; will-change: transform; direction: ltr;"
                        >
                          <div
                            style="height: 36px; width: 100%;"
                          >
                            <div
                              style="position: absolute; left: 0px; top: 0px; height: 36px; width: 100%;"
                            >
                              <div
                                class="TableRow nowrap"
                              >
                                <div
                                  class="TableCell entityName"
                                >
                                  <div
                                    class="Avatar rounded catalogAvatar"
                                    style="width: 24px; height: 24px; background: rgb(6, 137, 137);"
                                  >
                                    ace
                                  </div>
                                  <span>
                                    a catalog entity
                                  </span>
                                  <i
                                    class="Icon pinIcon svg interactive focusable small"
                                    tabindex="0"
                                  >
                                    <span
                                      class="icon"
                                    />
                                  </i>
                                  <div>
                                    Add to Hotbar
                                  </div>
                                </div>
                                <div
                                  class="TableCell"
                                >
                                  Mock
                                </div>
                                <div
                                  class="TableCell sourceCell"
                                >
                                  unknown
                                </div>
                                <div
                                  class="TableCell labelsCell scrollable"
                                >
                                  <div
                                    class="badge clickable scrollable"
                                    title="test=label"
                                  >
                                    test=label
                                  </div>
                                </div>
                                <div
                                  class="TableCell statusCell"
                                >
                                  <span
                                    class=""
                                  />
                                </div>
                                <div
                                  class="TableCell menu"
                                >
                                  <div>
                                    <i
                                      class="Icon material interactive focusable"
                                      data-testid="icon-for-menu-actions-for-catalog-for-a_catalogEntity_uid"
                                      id="menu-actions-for-catalog-for-a_catalogEntity_uid"
                                      tabindex="0"
                                    >
                                      <span
                                        class="icon"
                                        data-icon-name="more_vert"
                                      >
                                        more_vert
                                      </span>
                                    </i>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="AddRemoveButtons flex gaps"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="footer"
          />
        </div>
      </main>
      <div
        class="HotbarMenu flex column"
      >
        <div
          class="HotbarItems flex column gaps"
        >
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="0"
          >
            <div
              style="z-index: 12; position: absolute;"
            >
              <div
                class="HotbarIcon contextMenuAvailable"
              >
                <div
                  class="Avatar rounded disabled avatar"
                  id="hotbarIcon-hotbar-icon-welcome-page-entity"
                  style="width: 40px; height: 40px; background: rgb(210, 16, 232);"
                >
                  WP
                </div>
              </div>
            </div>
          </div>
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="1"
          >
            <div
              style="z-index: 11; position: absolute;"
            >
              <div
                class="HotbarIcon contextMenuAvailable"
              >
                <div
                  class="Avatar rounded disabled avatar"
                  id="hotbarIcon-hotbar-icon-catalog-entity"
                  style="width: 40px; height: 40px; background: rgb(5, 1, 130);"
                >
                  Ca
                </div>
              </div>
            </div>
          </div>
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="2"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="3"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="4"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="5"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="6"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="7"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="8"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="9"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="10"
          />
          <div
            class="HotbarCell isDraggingOwner animateDown"
            index="11"
          />
        </div>
        <div
          class="HotbarSelector"
        >
          <i
            class="Icon material interactive focusable"
            tabindex="0"
          >
            <span
              class="icon"
              data-icon-name="arrow_left"
            >
              arrow_left
            </span>
          </i>
          <div
            class="HotbarIndex"
          >
            <div
              class="badge Badge small clickable"
              data-testid="hotbar-menu-badge-for-default"
              id="hotbarIndex"
            >
              1
            </div>
          </div>
          <i
            class="Icon material interactive focusable"
            tabindex="0"
          >
            <span
              class="icon"
              data-icon-name="arrow_right"
            >
              arrow_right
            </span>
          </i>
        </div>
      </div>
      <div
        class="StatusBar"
        data-testid="status-bar"
      >
        <div
          class="leftSide"
          data-testid="status-bar-left"
        />
        <div
          class="rightSide"
          data-testid="status-bar-right"
        />
      </div>
    </div>
    <div
      class="Notifications flex column align-flex-end"
    />
  </div>
  <ul
    class="Animate opacity Menu MenuActions flex bottom right portal enter leave"
    data-testid="menu-actions-for-catalog-for-a_catalogEntity_uid"
    id="menu-actions-for-catalog-for-a_catalogEntity_uid"
    style="--enter-duration: 100ms; --leave-duration: 100ms; left: 0px; top: 8px;"
  >
    <li
      class="MenuItem"
      data-testid="open-details-menu-item-for-a_catalogEntity_uid"
      tabindex="0"
    >
      View Details
    </li>
    <li
      class="MenuItem"
      tabindex="0"
    >
      Add to Hotbar
    </li>
  </ul>
  <div
    class="Animate slide-right Drawer entityDetails right enter"
    data-testid="catalog-entity-details-drawer"
    style="--size: 725px; --enter-duration: 100ms; --leave-duration: 100ms;"
  >
    <div
      class="drawer-wrapper flex column"
    >
      <div
        class="drawer-title flex align-center"
      >
        <div
          class="drawer-title-text flex gaps align-center"
        >
          Mock: a catalog entity
          <i
            class="Icon material interactive focusable"
            tabindex="0"
          >
            <span
              class="icon"
              data-icon-name="content_copy"
            >
              content_copy
            </span>
          </i>
          <div>
            Copy
          </div>
        </div>
        <i
          class="Icon material interactive focusable"
          tabindex="0"
        >
          <span
            class="icon"
            data-icon-name="close"
          >
            close
          </span>
        </i>
        <div>
          Close
        </div>
      </div>
      <div
        class="drawer-content flex column box grow"
      >
        <div
          class="flex"
          data-testid="catalog-entity-details-content-for-a_catalogEntity_uid"
        >
          <div
            class="entityIcon"
          >
            <div
              class="Avatar rounded avatar"
              data-testid="detail-panel-hot-bar-icon"
              style="width: 128px; height: 128px; background: rgb(6, 137, 137);"
            >
              ace
            </div>
            <div
              class="hint"
            >
              Click to open
            </div>
          </div>
          <div
            class="box grow metadata"
          >
            <div
              class="DrawerItem"
            >
              <span
                class="name"
              >
                Name
              </span>
              <span
                class="value"
              >
                a catalog entity
              </span>
            </div>
            <div
              class="DrawerItem"
            >
              <span
                class="name"
              >
                Kind
              </span>
              <span
                class="value"
              >
                Mock
              </span>
            </div>
            <div
              class="DrawerItem"
            >
              <span
                class="name"
              >
                Source
              </span>
              <span
                class="value"
              >
                unknown
              </span>
            </div>
            <div
              class="DrawerItem"
            >
              <span
                class="name"
              >
                Status
              </span>
              <span
                class="value"
              />
            </div>
            <div
              class="DrawerItem"
            >
              <span
                class="name"
              >
                Labels
              </span>
              <span
                class="value"
              >
                <div
                  class="badge clickable scrollable"
                  title="test=label"
                >
                  test=label
                </div>
              </span>
            </div>
          </div>
        </div>
        <div
          class="box grow"
        />
      </div>
    </div>
    <div
      class="ResizingAnchor horizontal leading"
    />
  </div>
</body>
`;
